--- a/s/sp/spi/spine-health.com.html
+++ b/s/sp/spi/spine-health.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the spine-health.com privacy policy that was archived on 2001-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011222052104id_/http%3A//www.spine-health.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spine-health.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603152937id_/http%3A//www.spine-health.com/about/privacy.html) for the most accurate reproduction.-->
 
 <html><head><link rel="stylesheet" href="../style.css">
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
@@ -10,25 +10,33 @@
 		</head><body topmargin="0" leftmargin="3" rightmargin="0" marginwidth="0" marginheight="0" font="" face="Times New Roman,Georgia,Times" link="#003366" alink="red" vlink="#003366" background="../images/bgline.gif" bgcolor="white"><csscriptdict import="">
 			<script src="../GeneratedItems/CSScriptLib.js"></script>
 		</csscriptdict>
-		<csimport user="../../spine.data/Components/newnav.html" occur="0"></csimport>
+		<csimport user="../../spine.data/Components/masthead.html" occur="0"></csimport>
+		<csimport user="../../spine.data/Components/newnav.html" occur="0">
+			<csactiondict>
+				<script><!--
+CSAct[/*CMP*/ 'B8903EA76'] = new Array(CSOpenWindow,/*URL*/ 'disclaimpop.html','',350,300,false,false,false,false,false,false,false);
+
+// --></script>
+			</csactiondict>
+		</csimport>
 	
 
 	
-		<table cool="" width="587" height="416" border="0" cellpadding="0" cellspacing="0" gridx="10" gridy="10">
+		<table cool="" width="587" height="523" border="0" cellpadding="0" cellspacing="0" gridx="10" gridy="10">
 			<tbody><tr height="123">
-				<td width="586" height="123" colspan="4" valign="top" align="left" xpos="0">
+				<td width="583" height="123" colspan="4" valign="top" align="left" xpos="0">
 					<table border="0" cellpadding="0" cellspacing="0" height="109">
 						<tbody><tr>
 							<td width="580" align="left" valign="top">
 								<center>
-									<csobj w="586" h="85" t="Component" csref="../../spine.data/Components/masthead.html" occur="0">
+									<csobj w="580" h="79" t="Component" csref="../../spine.data/Components/masthead.html" occur="0">
 										<table border="0" cellpadding="0" cellspacing="0" height="79" width="580">
 											<tbody><tr height="79">
 												<td width="580" align="left" valign="top" height="79">
 													<center>
 														<table border="0" cellpadding="0" cellspacing="0" width="75" height="79">
 															<tbody><tr>
-																<td width="580"><img height="79" width="580" src="../images/SPINETAB.gif" border="0" usemap="#SPINETABb4d84bb8"><map name="SPINETABb4d84bb8"><area href="../contact/contact01.html" coords="514,43,569,56" shape="rect"><area href="about01.html" coords="453,43,502,56" shape="rect"><area href="../start/start03.html" coords="398,43,439,55" shape="rect"><area href="../index.html" coords="346,43,386,54" shape="rect"><area href="../market/mp01.html" coords="481,59,574,77" shape="rect"><area href="../bt/bt01.html" coords="385,59,477,78" shape="rect"><area href="../research/res01.html" coords="288,59,383,78" shape="rect"><area href="../topics/topics01.html" coords="192,59,283,80" shape="rect"><area href="../start/start01.html" coords="92,60,185,78" shape="rect"></map></td>
+																<td width="580"><img height="79" width="580" src="../images/RIBBNTAB.gif" border="0" usemap="#SPINETABb4d84bb8"><map name="SPINETABb4d84bb8"><area href="../contact/contact01.html" coords="514,43,569,56" shape="rect"><area href="about01.html" coords="453,43,502,56" shape="rect"><area href="../start/start03.html" coords="398,43,439,55" shape="rect"><area href="../index.html" coords="346,43,386,54" shape="rect"><area href="../market/mp01.html" coords="481,59,574,77" shape="rect"><area href="../bt/bt01.html" coords="385,59,477,78" shape="rect"><area href="../research/res01.html" coords="288,59,383,78" shape="rect"><area href="../topics/topics01.html" coords="192,59,283,80" shape="rect"><area href="../find/fi01.html" coords="92,60,185,78" shape="rect"></map></td>
 															</tr>
 														</tbody></table>
 													</center>
@@ -57,37 +65,70 @@
 						</tr>
 					</tbody></table>
 				</td>
+				<td width="3" height="123"></td>
 				<td width="1" height="123"><spacer type="block" width="1" height="123"></spacer></td>
 			</tr>
-			<tr height="292">
-				<td width="3" height="292"></td>
-				<td width="150" height="292" valign="top" align="left" xpos="3">
+			<tr height="3">
+				<td width="3" height="114" rowspan="2"></td>
+				<td width="150" height="114" colspan="2" rowspan="2" valign="top" align="left" xpos="3"><csobj w="137" h="93" t="Component" csref="../../spine.data/Components/keyword.html" occur="22">
+						<form method="POST" action="http://www.spine-health.com/spinesearch.ssi" enctype="x-www-form-encoded">
+							<table border="0" cellpadding="10" cellspacing="0" width="135">
+								<tbody><tr>
+									<td align="left" valign="top">Search words:</td>
+								</tr>
+								<tr>
+									<td align="left" valign="top"><input type="text" name="query" size="15"> <input type="hidden" name="template" value="http://www.spine-health.com/searchresults.htm"> <input type="image" alt="submit" src="../images/newindex/GO1.gif" border="0" name="image" value="Search"></td>
+								</tr>
+							</tbody></table>
+						</form>
+					</csobj></td>
+				<td width="433" height="3" colspan="2"></td>
+				<td width="1" height="3"><spacer type="block" width="1" height="3"></spacer></td>
+			</tr>
+			<tr height="111">
+				<td content="" csheight="281" width="430" height="396" rowspan="2" valign="top" align="left" xpos="153">
+					<div align="left">
+						<h1>Privacy Policy</h1>
+						<p>Spine-health.com is committed to maintaining the privacy of your online information.</p>
+						<p>Spine-health.com does not sell or disclose any personally identifiable information and does not use "cookies" or similar methods to collect personally identifiable information about you. We only collect personally identifiable information about you if you voluntarily provide it to us, for example, when you register on the site and provide your name and e-mail for us to forward the newsletter to you.</p>
+						<p>We do collect aggregate information about visitors to Spine-health to better understand how Spine-health visitors find the site and other statistical or background information, and this information may be shared with our advisors or others on an aggregate basis. No personally identifiable information is shared at any time.</p>
+					</div>
+					<div align="right">
+						<p><a href="terms.html"><b>See also: Terms and conditions</b></a></p>
+					</div>
+				</td>
+				<td width="3" height="396" rowspan="2"></td>
+				<td width="1" height="111"><spacer type="block" width="1" height="111"></spacer></td>
+			</tr>
+			<tr height="285">
+				<td width="4" height="285" colspan="2"></td>
+				<td width="149" height="285" valign="top" align="left" xpos="4">
 					<table border="1" cellpadding="0" cellspacing="0" bordercolor="#000000">
 						<tbody><tr>
 							<td align="left" valign="top">
-								<table border="0" cellpadding="2" cellspacing="0" width="135" height="151">
+								<table border="0" cellpadding="2" cellspacing="0" width="135" height="166">
 									<tbody><tr height="7">
 										<td height="7" colspan="2" align="left" valign="top" bgcolor="#003366"><span class="whiteheader">About us:</span></td>
 									</tr>
-									<tr height="7">
-										<td width="5" height="7" align="left" valign="top"><span class="sidenav">•</span></td>
-										<td width="110" height="7" align="left" valign="top"><span class="sidenav"><a href="about02.html">Medical advisory board</a></span></td>
+									<tr height="6">
+										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
+										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="about02.html">Medical advisory board</a></span></td>
 									</tr>
-									<tr height="7">
-										<td width="5" height="7" align="left" valign="top"><span class="sidenav">•</span></td>
-										<td width="110" height="7" align="left" valign="top"><span class="sidenav"><a href="about03.html">Contributing authors</a></span></td>
+									<tr height="6">
+										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
+										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="about03.html">Contributing authors</a></span></td>
 									</tr>
 									<tr height="7">
 										<td width="5" height="7" align="left" valign="top"><span class="sidenav">•</span></td>
 										<td width="110" height="7" align="left" valign="top"><span class="sidenav"><a href="about04.html">Principals</a></span></td>
 									</tr>
-									<tr height="7">
-										<td width="5" height="7" align="left" valign="top"><span class="sidenav">•</span></td>
-										<td width="110" height="7" align="left" valign="top"><span class="sidenav"><a href="about05.html">Editorial process</a></span></td>
+									<tr height="6">
+										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
+										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="about05.html">Editorial process</a></span></td>
 									</tr>
 									<tr height="6">
 										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
-										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="about06.html">Awards</a></span></td>
+										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="about06.html">Awards and recognition</a></span></td>
 									</tr>
 									<tr height="6">
 										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
@@ -103,43 +144,36 @@
 									</tr>
 									<tr height="6">
 										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
+										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="sponsorpolicy.html">Sponsorship policy</a></span></td>
+									</tr>
+									<tr height="6">
+										<td width="5" height="6" align="left" valign="top"><span class="sidenav">•</span></td>
 										<td width="110" height="6" align="left" valign="top"><span class="sidenav"><a href="terms.html">Terms and conditions</a></span></td>
 									</tr>
 									<tr height="6">
-										<td width="5" height="6" align="left" valign="top" bgcolor="#cccccc"><span class="sidenav">&gt;</span></td>
-										<td width="110" height="6" align="left" valign="top" bgcolor="#cccccc"><span class="sidenav">Privacy policy</span></td>
+										<td bgcolor="#dedfdf" width="5" height="6" align="left" valign="top"><span class="sidenav">&gt;</span></td>
+										<td bgcolor="#dedfdf" width="110" height="6" align="left" valign="top"><span class="sidenav">Privacy policy</span></td>
 									</tr>
 								</tbody></table>
 							</td>
 						</tr>
 					</tbody></table>
 				</td>
-				<td width="430" height="292" align="left" xpos="153" content="" valign="top" csheight="281">
-					<div align="left">
-						<h1>Privacy Policy</h1>
-						<p>Spine-health.com is committed to maintaining the privacy of your online information. </p>
-						<p>Spine-health.com does not sell or disclose any personally identifiable information and does not use "cookies" or similar methods to collect personally identifiable information about you. We only collect personally identifiable information about you if you voluntarily provide it to us, for example, when you register on the site and provide your name and e-mail for us to forward the newsletter to you.</p>
-						<p>We do collect aggregate information about visitors to Spine-health to better understand how Spine-health visitors find the site and other statistical or background information, and this information may be shared with our advisors or others on an aggregate basis. No personally identifiable information is shared at any time.</p>
-					</div>
-					<div align="right">
-						<p><a href="terms.html"><b>See also: Terms and conditions</b></a>
-					</p></div>
-				</td>
-				<td width="3" height="292"></td>
-				<td width="1" height="292"><spacer type="block" width="1" height="292"></spacer></td>
+				<td width="1" height="285"><spacer type="block" width="1" height="285"></spacer></td>
 			</tr>
 			<tr height="1" cntrlrow="">
 				<td width="3" height="1"><spacer type="block" width="3" height="1"></spacer></td>
-				<td width="150" height="1"><spacer type="block" width="150" height="1"></spacer></td>
+				<td width="1" height="1"><spacer type="block" width="1" height="1"></spacer></td>
+				<td width="149" height="1"><spacer type="block" width="149" height="1"></spacer></td>
 				<td width="430" height="1"><spacer type="block" width="430" height="1"></spacer></td>
 				<td width="3" height="1"><spacer type="block" width="3" height="1"></spacer></td>
 				<td width="1" height="1"></td>
 			</tr>
 		</tbody></table>
-		<csobj w="909" h="38" t="Component" csref="../../spine.data/Components/newnav.html" occur="0">
+		<csobj w="756" h="42" t="Component" csref="../../spine.data/Components/newnav.html" occur="0">
 			<table border="0" cellpadding="0" cellspacing="0" width="580" leftmargin="0" rightmargin="0" marginwidth="0" marginheight="0" height="34">
 				<tbody><tr height="14">
-					<td align="left" valign="middle" width="580" height="14" bgcolor="#dedfdf"><span class="sidenav">&nbsp;&nbsp;&nbsp;© 1999-2001 Spine-health.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="terms.html">Read the Disclaimer</a>.</span></td>
+					<td align="left" valign="middle" width="580" height="14" bgcolor="#dedfdf"><span class="sidenav">&nbsp;&nbsp;&nbsp;© 1999-2002 Spine-health.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" onclick="CSAction(new Array(/*CMP*/'B8903EA76'));return CSClickReturn();" csclick="B8903EA76">Read the Disclaimer</a> | &nbsp;<a href="terms.html">Read the Terms and Conditions</a></span></td>
 				</tr>
 				<tr height="4">
 					<td align="left" valign="top" width="580" height="4"><img height="3" width="580" src="../images/LINE0.gif" border="0" align="top"></td>
@@ -148,17 +182,16 @@
 					<td width="580" height="10">
 						<table border="0" cellpadding="2" cellspacing="0" width="570">
 							<tbody><tr>
-								<td align="left" valign="top"><span class="sidenav">&nbsp;&nbsp;&nbsp;<a href="../index.html">Home</a> | <a href="../start/start03.html">Register</a> | <a href="about01.html">About Us</a> | <a href="../contact/contact01.html">Contact Us</a> | <a href="../sitemap.html">Site Map</a> | <a href="../find/fi01.html">Spine Directory</a> | <a href="../search/search.html">Search</a></span></td>
+								<td align="left" valign="top"><span class="sidenav">&nbsp;&nbsp;&nbsp;<a href="../index.html">Home</a> | <a href="../start/start03.html">Newsletter</a> | <a href="about01.html">About Us</a> | <a href="../contact/contact01.html">Contact Us</a> | <a href="../sitemap/index.html">Site Map</a> | <a href="../find/fi01.html">Find a Doctor</a> | <a href="../research/trials/trials01.html">Clinical Trials</a></span></td>
 							</tr>
 						</tbody></table>
 					</td>
 				</tr>
 				<tr height="10">
-					<td width="580" height="10"><img height="10" width="580" src="../images/LINE0.gif" border="0" align="bottom"></td>
+					<td width="580" height="10"><img height="10" width="580" src="../images/LINE0.gif" align="bottom" border="0"></td>
 				</tr>
 			</tbody></table>
 		</csobj>
 	
-
 
 </body></html>
