--- a/f/fi/fin/findit.com.html
+++ b/f/fi/fin/findit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the findit.com privacy policy that was archived on 2001-11-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011101050705id_/http%3A//findit.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the findit.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603154026id_/http%3A//www.findit.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Findit.com - Find everything on the Internet.</title>
@@ -24,11 +24,13 @@ A.bluelink:visited {color:blue; text-decoration: none}
 
 
 <table width="450" cellpadding="0" cellspacing="0" border="0">
-	<tbody><tr><td bgcolor="#ff0000" height="1" nowrap=""><table border="0" cellpadding="0" cellspacing="0" height="1"><tbody><tr><td></td></tr></tbody></table></td></tr>
-	<tr><td bgcolor="#eeeeee" height="25" align="center"><font face="verdana, arial, helvetica" size="1"><b>
-<a href="/index.html"><font color="#000000">Home</font></a> - <a href="http://www.chatmachine.com"><font color="#000000">Chat</font></a> - <a href="http://click.linksynergy.com/fs-bin/stat?id=yScIx8Le3hk&amp;offerid=18926.10000003&amp;type=3&amp;subid=0"><font color="#ff0000">Free Long Distance</font></a><img border="0" width="1" height="1" src="http://ad.linksynergy.com/fs-bin/show?id=yScIx8Le3hk&amp;bids=18926.10000003&amp;type=3&amp;subid=0"> - <a href="http://findit.shop.goto.com/"><font color="#000000">Comparison Shopping</font></a> - <a href="http://auctions.goto.com/default.asp?pid=30047480"><font color="#000000">Auctions</font></a></b></font></td></tr>
-	<tr><td bgcolor="#ff0000" height="1" nowrap=""><table border="0" cellpadding="0" cellspacing="0" height="1"><tbody><tr><td></td></tr></tbody></table></td></tr>
-	</tbody></table>
+        <tbody><tr><td bgcolor="#ff0000" height="1" nowrap=""><table border="0" cellpadding="0" cellspacing="0" height="1"><tbody><tr><td></td></tr></tbody></table></td></tr>
+        <tr><td bgcolor="#eeeeee" height="25" align="center"><font face="verdana, arial,
+helvetica" size="1"><b>
+<a href="http://www.findit.com"><font color="#000000">Home</font></a> - <a href="http://www.chatmachine.com"><font color="#000000">Chat</font></a> - <a href="http://www.&#10;hoteldiscounts.com/cgi-bin/pickcity?SID=FDT&amp;LKF=FDT"><font color="#000000">Hotel Discounts</font></a> -
+<a href="http://www.magnetic.com/"><font color="#000000">Web Design</font></a></b></font></td></tr>
+        <tr><td bgcolor="#ff0000" height="1" nowrap=""><table border="0" cellpadding="0" cellspacing="0" height="1"><tbody><tr><td></td></tr></tbody></table></td></tr>
+        </tbody></table>
 
 	
 	</td>
@@ -82,32 +84,6 @@ document.write(date + ", " + year + "");
 	<br>
 <table width="96%" border="0" cellspacing="0" cellpadding="0" align="center"><tbody><tr><td>
 
-<center>	
-	<!-- VC active -->
-<script language="JavaScript">
-<!--
-// ValueParameters
-ValueHost = "hs0162258";
-ValueID = "indexpage";
-ValueLoaded = false;
-ValueTargetCurrent = true;
-ValueVersion = "1.0";
-ValueBgColor = "#ffcc00";
-ValueNoText = true;
-//-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
-<noscript>
-<a href="http://kansas.valueclick.com/redirect?host=hs0162258&b=indexpage&v=0"><img border="0" width="468" height="60" alt="Click here to visit our sponsor" src="http://kansas.valueclick.com/cycle?host=hs0162258&b=indexpage&noscript=1"></a>
-</noscript>
-<!-- vc active -->
-</center>
-
 <!-- ====== Start Content ======= -->
 <br><br><font face="arial, helvetica" size="3"><b>Findit.com Privacy Policy</b>
 <p><font face="arial, helvetica" size="2">Findit.com, and its advertisers and affiliates are deeply committed to protecting the privacy of Internet users. Below is information outlining our continued support for the responsible management of consumer information.
@@ -150,23 +126,12 @@ if (ValueLoaded) ValueShowAd();
 
 <font face="Verdana,Arial,Helvetica,sans-serif" size="1">
 <b>
-Copyright © 2000 Findit.com Inc. All rights reserved.<br>
+Copyright © 2001 Findit.com Inc. All rights reserved.<br>
 Web Development by <a href="http://www.magnetic.com">Magnetic</a>.
 </b>
 </font>
 
 <br><img src="images/spacer.gif" width="1" height="10" alt="" border="0">
-
-<!-- VC layer -->
-<script language="JavaScript">
-<!--
-document.write('<LAYER SRC="' + ValueBanner + '&t=html" WIDTH="' + IWidth + '" ');
-document.write('HEIGHT="' + IHeight + '" VISIBILITY="hide" onLoad=');
-document.write('"moveToAbsolute(VC.pageX,VC.pageY); clip.width=' + IWidth + '; ');
-document.write('clip.height=' + IHeight + '; visibility=\'show\'"></LAYER>');
-// -->
-</script>
-<!-- vc layer -->
 
 </center>
 
