--- a/p/pl/pla/planetizen.com.html
+++ b/p/pl/pla/planetizen.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the planetizen.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216021751id_/http%3A//www.planetizen.com/about/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the planetizen.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603154501id_/http%3A//planetizen.com/about/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -12,40 +12,60 @@
   <meta name="description" content="PLANetizen is an information exchange 
    for the urban planning and development community. PLANetizen features
    daily news, jobs, events, editorials, and more.">
-  <link rel="stylesheet" href="/inc/main.css">
+  <link rel="stylesheet" href="/inc/main.css" type="text/css">
   <script language="JavaScript" type="text/javascript">
   <!--//
     if(top.location != self.location)
     { top.location =self.location }
-    //-->
+
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+  var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+   //-->
   </script>
  </head>
- <body bgcolor="white" link="#006699" vlink="#3399cc" alink="#cc0000">
- 
-  
-
+ <body bgcolor="white" link="#006699" vlink="#3399CC" alink="#006699" onload="MM_preloadImages('/images/t_jobs_on.gif','/images/submit_on.gif','/images/t_announce_on.gif','/images/t_oped_on.gif','/images/t_calendar_on.gif')">
  <div class="header"> 
  <!-- Start:TopBar -->
  <div class="printhide">
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
    <tbody><tr>
-    <td height="25" bgcolor="black"><a href="#content"><img src="/images/clear.gif" height="0" width="0" border="0" alt="Skip Navigation "></a><font size="2" face="Verdana">&nbsp;&nbsp;&nbsp;</font><a href="/"><font size="2" color="white" face="Verdana"><b>HOME</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/news/"><font size="2" color="white" face="Verdana"><b>NEWS</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/announce/"><font size="2" color="white" face="Verdana"><b>ANNOUNCE</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/jobs/"><font size="2" color="white" face="Verdana"><b>JOBS</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/oped/"><font size="2" color="white" face="Verdana"><b>OP-ED</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/calendar/"><font size="2" color="white" face="Verdana"><b>CALENDAR</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/books/"><font size="2" color="white" face="Verdana"><b>BOOKS</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/about/"><font size="2" color="white" face="Verdana"><b>ABOUT</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/search.php"><font size="2" color="white" face="Verdana"><b>SEARCH</b></font></a></td>
+    <td height="25" bgcolor="black"><a href="#content"><img src="/images/clear.gif" height="0" width="0" border="0" alt="Skip Navigation "></a><font size="1" face="Verdana">&nbsp;&nbsp;&nbsp;</font><font size="1"><a href="/"><font color="white" face="Verdana"><b>HOME</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/news/"><font color="white" face="Verdana"><b>NEWS</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/announce/"><font color="white" face="Verdana"><b>ANNOUNCE</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/jobs/"><font color="white" face="Verdana"><b>JOBS</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/oped/"><font color="white" face="Verdana"><b>OP-ED</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/calendar/"><font color="white" face="Verdana"><b>CALENDAR</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/books/"><font color="white" face="Verdana"><b>BOOKS</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/aicp/"><font color="white" face="Verdana"><b>AICP</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/about/"><font color="white" face="Verdana"><b>ABOUT</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/search.php"><font color="white" face="Verdana"><b>SEARCH</b></font></a></font></td>
     <td height="25" align="right" bgcolor="black">&nbsp;&nbsp;&nbsp;</td>
    </tr>
   </tbody></table>
  </div>
- <!-- End:TopBar -->
- <!-- Start:TopAdBar -->
+<!-- End:TopBar -->
+<!-- Start:TopAdBar -->
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
    <tbody><tr>
     <td height="1" colspan="2" bgcolor="#66ccff"><img height="1" width="10" src="/images/clear.gif" alt=" "></td>
    </tr>
    <tr>
-    <td height="82" bgcolor="#006699"><a href="/"><font size="2" face="Verdana"><img height="53" width="239" src="/images/logo_hed.gif" border="0" alt="PLANetizen - Your Digital Source for Planning"></font></a></td>
+    <td height="82" bgcolor="#006699"><a href="/"><font size="2" face="Verdana"><img height="82" width="309" src="/images/logo_hed2yr.gif" border="0" alt="PLANetizen - The Planning and Development Network"></font></a></td>
     <td height="82" bgcolor="#006699" align="right"><font face="Verdana">
     <!-- Start:Ad -->
-    <a href="http://carsonessays.homestead.com/home.html&#10;">
-       <img width="468" height="60" src="/ads/banners/commonsense_468x60.gif" border="0" hspace="2" alt=" Advertisement "></a> 
+    <a href="http://dmoz.org/Science/Social_Sciences/Urban_and_Regional_Planning/&#10;">
+       <img width="468" height="60" src="/ads/banners/dmoz_468x60.gif" border="0" hspace="2" alt=" Advertisement "></a> 
 
 
 
@@ -68,9 +88,6 @@
  <div class="content"> 
   <a name="content"></a> 
 <!--End:Top-->
-
-
-
 
 <table border="0" cellpadding="5" cellspacing="0" width="100%">
  <tbody><tr> 
@@ -152,7 +169,7 @@
 
 
 <!--Start:Bot-->
- </div>
+ </div> 
  <div class="footer">
  <div class="printhide">
  <br><br>
@@ -160,33 +177,33 @@
    <tbody><tr>
     <td height="32" bgcolor="#006699" valign="middle" width="147">
      <a href="/index.php"><img height="27" width="147" src="/images/logo_foot.gif" border="0" alt="PLANetizen"></a></td>
-   <td width="97%" height="32" align="left" bgcolor="#006699">
-    <font size="2" face="Verdana, Arial, Helvetica, Sans-serif">&nbsp;&nbsp;    
-    <a href="/news/submit.php"><font size="2" color="white"><b>SUBMIT NEWS</b></font></a> <font size="2" color="white"> | </font>
-<a href="/announce/post/"><font size="2" color="white"><b>SUBMIT ANNOUNCEMENTS</b></font></a> <font size="2" color="white"> | </font>
-    <a href="/jobs/submit.php"><font size="2" color="white"><b>SUBMIT JOBS</b></font></a> <font size="2" color="white"> | </font>
-    <a href="http://www.planetizen.com/calendar/submit.php"><font size="2" color="white"><b>SUBMIT EVENT</b></font></a> <font size="2" color="white"></font>    
-    </font>    
-   </td>
-  </tr>
-  <tr>
-   <td height="1" bgcolor="#66ccff" colspan="2"><font size="2"><img height="1" width="20" src="/images/clear.gif" alt=" "></font></td>
-  </tr>
-  <tr>
-   <td height="25" bgcolor="black" colspan="2"><font size="2" face="Verdana">&nbsp;&nbsp;&nbsp;</font><a href="/"><font size="2" color="white" face="Verdana"><b>HOME</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/news/"><font size="2" color="white" face="Verdana"><b>NEWS</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/announce/"><font size="2" color="white" face="Verdana"><b>ANNOUNCE</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/jobs/"><font size="2" color="white" face="Verdana"><b>JOBS</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/oped/"><font size="2" color="white" face="Verdana"><b>OP-ED</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/calendar/"><font size="2" color="white" face="Verdana"><b>CALENDAR</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/books/"><font size="2" color="white" face="Verdana"><b>BOOKS</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/about/"><font size="2" color="white" face="Verdana"><b>ABOUT</b></font></a><font size="2" color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/search.php"><font size="2" color="white" face="Verdana"><b>SEARCH</b></font></a></td>
-  </tr>
- </tbody></table>
+    <td width="97%" height="32" align="left" bgcolor="#006699">
+     <font size="1" face="Verdana, Arial, Helvetica, Sans-serif">&nbsp;&nbsp; 
+     <a href="/news/submit.php"><font color="white"><b>SUBMIT NEWS</b></font></a> <font color="white"> | </font>
+     <a href="/announce/post/"><font color="white"><b>SUBMIT ANNOUNCEMENTS</b></font></a> <font color="white"> | </font>
+     <a href="/jobs/submit.php"><font color="white"><b>SUBMIT JOBS</b></font></a> <font color="white"> | </font>
+     <a href="/calendar/submit.php"><font color="white"><b>SUBMIT EVENTS</b></font></a> <font color="white"></font></font> </td>
+
+
+   </tr>
+   <tr>
+    <td height="1" bgcolor="#66ccff" colspan="2"><font size="2"><img height="1" width="20" src="/images/clear.gif" alt=" "></font></td>
+   </tr>
+   <tr>
+    <td height="25" bgcolor="black" colspan="2"><font size="1" face="Verdana">&nbsp;&nbsp;&nbsp;</font><font size="1"><a href="/"><font color="white" face="Verdana"><b>HOME</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/news/"><font color="white" face="Verdana"><b>NEWS</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/announce/"><font color="white" face="Verdana"><b>ANNOUNCE</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/jobs/"><font color="white" face="Verdana"><b>JOBS</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/oped/"><font color="white" face="Verdana"><b>OP-ED</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/calendar/"><font color="white" face="Verdana"><b>CALENDAR</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/books/"><font color="white" face="Verdana"><b>BOOKS</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/aicp/"><font color="white" face="Verdana"><b>AICP</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/about/"><font color="white" face="Verdana"><b>ABOUT</b></font></a><font color="white" face="Verdana">&nbsp;|&nbsp;</font><a href="/search.php"><font color="white" face="Verdana"><b>SEARCH</b></font></a></font></td>
+   </tr>
+  </tbody></table>
  </div>
  <p>
   <span class="printhide">
   <a href="http://jigsaw.w3.org/css-validator/"> <img border="0" src="/images/w3c-valid-css.gif" alt="Valid CSS!" height="31" width="88" align="right"></a>
-  
- <a href="http://validator.w3.org/"><img border="0" src="/images/w3c-valid-html401.gif" alt="Valid HTML 4.01!" height="31" width="88" align="right"></a>
+
+  <a href="http://validator.w3.org/"><img border="0" src="/images/w3c-valid-html401.gif" alt="Valid HTML 4.01!" height="31" width="88" align="right"></a>
   </span>
   <font size="2" face="Verdana, Arial, Helvetica, Sans-serif">
-  &nbsp;Copyright © 2000-2001 Urban Insight, Inc. All rights reserved. <br>
+  &nbsp;Copyright © 2000-2002 Urban Insight, Inc. All rights reserved. <br>
   <span class="printhide"> 
-  &nbsp;<a href="mailto:info@planetizen.com">Contact us</a>  
+  &nbsp;<a href="mailto:info@planetizen.com">Contact us</a> 
   | <a href="/about/advertise.php">Advertise</a>
   | <a href="/about/privacy.php">Privacy Policy</a>
   | <a href="/about/standards.php">Accessibility</a>
@@ -200,6 +217,7 @@
 
 
 <!--End:Bot -->
+
 
 
 
